--- a/src/app/pages/transactions-page/transactions-page.component.scss
+++ b/src/app/pages/transactions-page/transactions-page.component.scss
@@ -1,20 +1,31 @@
 .main-container {
-    max-width:85%;
-    margin:auto;
+    max-width: 90%;
+    margin: auto;
 }
 
 h1 {
-    font-size: 36px;
-    font-family: Raleway !important;
-    font-weight: bold;
+    font-size: 3em;
 }
 
 h2 {
     margin: 20px 0px 20px 0px;
 }
 
-h1, h2 {
-    margin-left:10px
+h1,
+h2 {
+    margin-left: 10px
+}
+
+a {
+    text-decoration: none;
+}
+
+.buffer-head {
+    height: 3em;
+}
+
+.buffer-tail {
+    height: 20em;
 }
 
 .current-price {
@@ -22,17 +33,40 @@ h1, h2 {
 }
 
 .overview-container {
+    font-size: 20px;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: top;
 }
 
+.button-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin: 3em 0em 3em 0em
+}
+
+
+@media (min-width: 1040px) {
+    .analytics-container {
+        display: grid;
+        grid-template: repeat(2, 1fr) / repeat(2, 1fr);
+        gap: 10px;
+    }
+}
+
+@media (max-width: 1040px) {
+    .overview-container {
+        font-size: 16px;
+    }
+}
+
 .data-chart {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin:auto;
+    margin: auto;
     margin-top: 15px;
 }
 
@@ -41,7 +75,7 @@ h1, h2 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin:auto;
+    margin: auto;
 }
 
 .table-container {
