added acct balance widget

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,9 @@
         (closed)="sidenavOpened = false"
         (opened)="sidenavOpened = true"
     >
-        <p>Sidebar content</p>
+        <div class="sidenav-container">
+            <app-sidenav/>
+        </div>
     </mat-sidenav>
   
     <button
