styling on search page

--- a/src/app/components/account-info/account-info.component.html
+++ b/src/app/components/account-info/account-info.component.html
@@ -6,6 +6,8 @@
     <p>{{ currentBalance | currency: 'USD': 'symbol' }}</p>
     <p>Total Investment:</p>
     <p>{{ totalInvestmentValue | currency: 'USD': 'symbol' }}</p>
+    <p>Total Balance:</p>
+    <p>{{ totalBalance | currency: 'USD': 'symbol' }}</p>
   </div>
   
   <ng-template #notLoggedInTemplate>
