added landing page and footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,6 +28,11 @@
         <div class="main-content">
             <router-outlet></router-outlet>
         </div>
+        
+        <div class="disclaimer-section">
+            <img class="break-img" src="assets/break.webp" alt="Disclaimer break image">
+            <app-disclaimers/>
+        </div>
     </mat-sidenav-content>
     
 </mat-sidenav-container>
