--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -1,6 +1,8 @@
 <div class="main-container">
     <div>
-        <img class="logo-img" src="assets/logo.webp" alt="Church Street Financial">
+        <a routerLink="/">
+            <img class="logo-img" src="assets/logo.webp" alt="Church Street Financial">
+        </a>
 
         <ul class="link-container">
             <li class="sidenav-link"><a routerLink="/">Home</a></li>
@@ -11,5 +13,6 @@
 
     <app-account-info></app-account-info>
 
-    <div class="sidenav-buffer"></div>
+    <div class="sidenav-buffer">
+    </div>
 </div>
