--- a/src/app/components/sidenav/sidenav.component.scss
+++ b/src/app/components/sidenav/sidenav.component.scss
@@ -55,3 +55,10 @@ li a {
         background-color: #bcd4f5;
     }
 }
+
+.sidenav-buffer {
+    display: flex;
+    flex-direction: row;
+    align-items: end;
+    justify-content: center;
+}
