--- a/src/styles.scss
+++ b/src/styles.scss
@@ -183,3 +183,11 @@ mat-sidenav-content {
 .header-card .p-card {
   background-color: #eff2f5 !important;
 }
+
+.break-img {
+  max-width: 100%;
+}
+
+.disclaimer-section {
+  background-color: #bcd4f5;
+}
