--- a/src/app/pages/portfolio-overview/portfolio-overview.component.html
+++ b/src/app/pages/portfolio-overview/portfolio-overview.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="cognitoService.currentUserSignal(); else loggedOutTemplate">
     <h1>Welcome!</h1>
     <portfolio-display-list></portfolio-display-list>
-  </div> 
+  </div> g
   
   <ng-template #loggedOutTemplate>
     <h1>Please log in to access this page.</h1>
